--- a/Event Website/Readme
+++ b/Event Website/Readme
@@ -1,1 +1,3 @@
-Open main.html to open Event Website!!!
+Open main.html to open the Event Website!!!
+
+All the data and information is not entered or put in the sections only random font name and text information are displayed.
